--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <h1>You've reached Aaron Lin's website.</h1>
     <p>I'm a third-year undergrad at UC Berkeley, studying Electrical Engineering and Computer Science.
       I'm on <a href="https://github.com/lin-aaron/">Github</a> and <a href="https://linkedin.com/in/aaron-lin8">LinkedIn</a>.
-      Here is my <a href="resources/cv.pdf">resume</a>. I'm currently looking for internship opportunities in software engineering for the summer for 2019!
+      Here's my <a href="resources/cv.pdf">resume</a>.
+    </p>
+    <p>I'm currently looking for internship opportunities in software engineering for the summer for 2019!
       Email me at aaron (dot) lin [at] berkeley {dot} edu.</p>
   </body>
 </html>
