--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
       I'm on <a href="https://github.com/lin-aaron/">Github</a> and <a href="https://linkedin.com/in/aaron-lin8">LinkedIn</a>.
       Here's my <a href="resources/cv.pdf">resume</a>.
     </p>
-    <p>I'm currently looking for internship opportunities in software engineering for the summer for 2019!
-      Email me at aaron (dot) lin [at] berkeley {dot} edu.</p>
+    <p>Email me at aaron (dot) lin [at] berkeley {dot} edu.</p>
   </body>
 </html>
