--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       I'm on <a href="https://github.com/lin-aaron/">Github</a> and <a href="https://linkedin.com/in/aaron-lin8">LinkedIn</a>.
       Here's my <a href="resources/cv.pdf">resume</a>.
     </p>
-    <p>Email me at aaron (dot) lin [at] berkeley {dot} edu.</p>
+    <p>Check out what I've been doing on the high altitude balloon team with <a href="https://stac.berkeley.edu/">Space Technologies at Cal</a>!
+      Email me at aaron (dot) lin [at] berkeley {dot} edu.</p>
   </body>
 </html>
