--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <h1>You've reached Aaron Lin's website.</h1>
     <p>I'm a third-year undergrad at UC Berkeley, studying Electrical Engineering and Computer Science.
       I'm on <a href="https://github.com/lin-aaron/">Github</a> and <a href="https://linkedin.com/in/aaron-lin8">LinkedIn</a>.
-      Here's my <a href="resources/cv.pdf">resume</a>.
+      Here's my <a href="resources/Aaron Lin CV.pdf">resume</a>.
     </p>
     <p>Check out what I've been doing on the high altitude balloon team with <a href="https://stac.berkeley.edu/">Space Technologies at Cal</a>!
       Email me at aaron (dot) lin [at] berkeley {dot} edu.</p>
