--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>You've reached Aaron Lin's website.</h1>
-    <p>I'm a third-year undergrad at UC Berkeley, studying Electrical Engineering and Computer Science.
+    <p>I'm a fourth-year undergrad at UC Berkeley, studying Electrical Engineering and Computer Science.
       I'm on <a href="https://github.com/lin-aaron/">Github</a> and <a href="https://linkedin.com/in/aaron-lin8">LinkedIn</a>.
       Here's my <a href="resources/Aaron Lin CV.pdf">resume</a>.
     </p>
