--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
   <head>
     <link href="styles.css" rel="stylesheet">
+    <title>Aaron Lin</title>
   </head>
   <body>
     <h1>You've reached Aaron Lin's website.</h1>
