spelling error anch>acnh, cv naming stuff

--- a/hidden/acnh.html
+++ b/hidden/acnh.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>ANCH Music</title>
+    <title>ACNH Hourly Music</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="script.js"></script>
   </head>
