looped songs, favicon, mute button, styling

--- a/hidden/acnh.html
+++ b/hidden/acnh.html
@@ -3,13 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title>ACNH Hourly Music</title>
+    <link rel="shortcut icon" href="leaf.png" />
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="script.js"></script>
   </head>
   <body>
+    <div id="overlay">
+      <div id="text">Click to start!</div>
+    </div>
     <p><span id="clock">&nbsp;</span>
     </p>
-    <p id="clickAlert">Click the clock to start playing audio!</p>
+    <div id="mute">
+      <img src="mute.png"/>
+    </div>
+    <p id="footer">
+      Created by Aaron Lin, 2020.
+    </p>
     <!-- <span id="playing">Now playing: <span id="song">&nbsp;</span></span> -->
   </body>
 </html>
