adding meta tags

--- a/hidden/acnh.html
+++ b/hidden/acnh.html
@@ -2,6 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="keywords" content="Animal Crossing, ACNH, New Horizons, OST, Soundtrack, Music">
+    <meta name="og:title" content="Animal Crossing New Horizons Hourly Music">
+    <meta name="og:type" content="website">
+    <meta name="og:url" content="aaronl.in/hidden/acnh">
+    <meta name="description" content="Listen to the hourly music from Animal Crossing New Horizons synced to the current time!">
+    <meta name="og:image" content="https://play.nintendo.com/images/AC_Tom_FRYtwIN.17345b1513ac044897cfc243542899dce541e8dc.9afde10b.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ACNH Hourly Music</title>
     <link rel="shortcut icon" href="leaf.png" />
     <link rel="stylesheet" type="text/css" href="styles.css">
