--- a/hidden/acnh.html
+++ b/hidden/acnh.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="keywords" content="Animal Crossing, ACNH, New Horizons, OST, Soundtrack, Music">
-    <meta name="og:title" content="Animal Crossing New Horizons Hourly Music">
-    <meta name="og:type" content="website">
-    <meta name="og:url" content="aaronl.in/hidden/acnh">
+    <meta property="og:title" content="Animal Crossing New Horizons Hourly Music">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="aaronl.in/hidden/acnh">
     <meta name="description" content="Listen to the hourly music from Animal Crossing New Horizons synced to the current time!">
-    <meta name="og:image" content="https://play.nintendo.com/images/AC_Tom_FRYtwIN.17345b1513ac044897cfc243542899dce541e8dc.9afde10b.png">
+    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/en/7/72/Tom_Nook.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ACNH Hourly Music</title>
     <link rel="shortcut icon" href="leaf.png" />
