--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   </head>
   <body>
     <h1>You've reached Aaron Lin's website.</h1>
-    <p>I'm a fourth-year undergrad at UC Berkeley, studying Electrical Engineering and Computer Science.
+    <p>I did my undergrad at UC Berkeley, BS in Electrical Engineering and Computer Science.
       I'm on <a href="https://github.com/lin-aaron/">Github</a> and <a href="https://linkedin.com/in/aaron-lin8">LinkedIn</a>.
       Here's my <a href="resources/Aaron_Lin_CV.pdf">resume</a>.
     </p>
-    <p>Check out what I've been doing on the high altitude balloon team with <a href="https://stac.berkeley.edu/">Space Technologies at Cal</a>!</p>
+    <p>Check out what I did on the high altitude balloon team with <a href="https://stac.berkeley.edu/">Space Technologies at Cal</a>!</p>
     <p>Email me at aaron (dot) lin [at] berkeley {dot} edu.</p>
   </body>
 </html>
